#SB-25225 UI fix for topic picker overlap in edit form popup

--- a/src/app/client/src/assets/styles/pages/_dock.scss
+++ b/src/app/client/src/assets/styles/pages/_dock.scss
@@ -1001,3 +1001,10 @@ app-question-set-editor{
   }
 }
 
+.sb-modal{
+  &.ui{
+    &.modal{
+      box-shadow: none;
+    }
+  }
+}
